[package]
name = "steam_trading_cards_rust"
version = "0.1.0"
authors = ["rage311 <rage_311@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = ""
config = "0.10"
futures = ""
tokio = { version = "0.2", features = [ "full" ] }
reqwest = { version = "0.10", features = [ "cookies", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = ""
openssl = ""
structopt = { version = "0.3", default-features = false }
