[package]
name = "steam_trading_cards"
version = "0.1.0"
authors = ["rage311 <rage_311@hotmail.com>"]
edition = "2018"

[dependencies]
base64 =  "0.13"
config = "0.11"
futures = "0.3"
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", features = [ "cookies", "json" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
openssl = "0.10"
structopt = { version = "0.3", default-features = false }
